@@ -1,28 +1,5 @@
 package de.saring.sportstracker.gui;
 
-import de.saring.util.data.IdObject;
-import java.awt.BorderLayout;
-import java.awt.Image;
-import java.awt.Toolkit;
-import java.util.Arrays;
-
-import javax.inject.Inject;
-import javax.inject.Singleton;
-import javax.swing.Action;
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JLabel;
-import javax.swing.JMenu;
-import javax.swing.JMenuBar;
-import javax.swing.JMenuItem;
-import javax.swing.JPanel;
-import javax.swing.JSeparator;
-import javax.swing.JToolBar;
-import javax.swing.KeyStroke;
-import javax.swing.border.EmptyBorder;
-
-import org.jdesktop.application.FrameView;
-
 import de.saring.sportstracker.core.STOptions;
 import de.saring.sportstracker.data.Exercise;
 import de.saring.sportstracker.gui.views.BaseView;
@@ -32,10 +9,20 @@ import de.saring.sportstracker.gui.views.listview.ExerciseListView;
 import de.saring.sportstracker.gui.views.listview.NoteListView;
 import de.saring.sportstracker.gui.views.listview.WeightListView;
 import de.saring.util.data.IdDateObjectList;
+import de.saring.util.data.IdObject;
 import de.saring.util.data.IdObjectListChangeListener;
 import de.saring.util.gui.mac.MacSpecials;
 import de.saring.util.unitcalc.CalculationUtils;
 import de.saring.util.unitcalc.FormatUtils;
+import java.awt.BorderLayout;
+import java.awt.Image;
+import java.awt.Toolkit;
+import java.util.Arrays;
+import javax.inject.Inject;
+import javax.inject.Singleton;
+import javax.swing.*;
+import javax.swing.border.EmptyBorder;
+import org.jdesktop.application.FrameView;
 
 /**
  * This class contains all view (MVC) related data and functionality of the 
@@ -519,5 +506,5 @@ public class STViewImpl extends FrameView implements STView {
         }
 
         laStatusBar.setText (statusText);
-    }       
+    }   
 }
