@@ -2,7 +2,7 @@
 # SportsTracker resources for english language (default)
 # 
 # Version: SportsTracker 5.5.0
-# Last update: 2012/03/18
+# Last update: 2012/07/23
 # 
 # (C) 2012, Stefan Saring
 #####################################################################
@@ -12,6 +12,7 @@ common.n_a_=n.a.
 common.enabled=enabled
 common.disabled=disabled
 common.info=Info
+common.warning=Warning
 common.error=Error
 
 # SportsTracker data classes
@@ -25,6 +26,7 @@ st.intensity.intervals=intervals
 # SportsTracker main class
 st.main.error.create_dir=Failed to create application data directory, you will not be able to save any data!\nSee console output for more information.
 st.main.error.load_data=Failed to load application data! Starting with empty lists.\nSee console output for more information.
+st.main.error.missing_exercise_files=The exercise files attached to the following exercises\ncan't be found:\n\n%s\nPlease check them manually.
 st.main.error.save_data=Failed to save application data!\nSee console output for more information.
 st.main.confirm.save_exit.title=Save Changes
 st.main.confirm.save_exit.text=Do you want to save your changes?
