@@ -1,8 +1,8 @@
 #####################################################################
 # SportsTracker resources for german language
 # 
-# Version: SportsTracker 5.4.0
-# Last update: 2012/03/03
+# Version: SportsTracker 5.5.0
+# Last update: 2012/07/23
 # 
 # (C) 2012, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
@@ -13,6 +13,7 @@ common.n_a_=n.v.
 common.enabled=aktiv
 common.disabled=nicht aktiv
 common.info=Info
+common.warning=Warnung
 common.error=Fehler
 
 # SportsTracker data classes
@@ -26,6 +27,7 @@ st.intensity.intervals=Intervalle
 # SportsTracker main class
 st.main.error.create_dir=Das Verzeichnis f\u00fcr Anwendungsdaten konnte nicht erstellt werden,\ndas Speichern von Daten ist somit nicht m\u00f6glich.\nWeitere Informationen entnehmen Sie bitte der Konsole.
 st.main.error.load_data=Die Anwendungsdaten konnten nicht geladen werden! Es wird mit leeren Listen gestartet.\nWeitere Informationen entnehmen Sie bitte der Konsole.
+st.main.error.missing_exercise_files=Die HRM Dateien der folgenden Einheiten konnten nicht\ngefunden werden:\n\n%s\nBitte \u00fcberpr\u00fcfen Sie diese Einheiten.
 st.main.error.save_data=Die Anwendungsdaten konnten nicht gespeichert werden!\nWeitere Informationen entnehmen Sie bitte der Konsole.
 st.main.confirm.save_exit.title=Speichern
 st.main.confirm.save_exit.text=M\u00f6chten Sie die \u00c4nderungen speichern?
