@@ -26,6 +26,8 @@ v5.5.0:
   - SportsTracker icon is available in many sizes, it's needed for different
     window and dock sizes depending on the operating system and user settings
     (automatic scaling looks ugly)
+  - Execise file existence check after application startup. A warning dialog 
+    displays all exercises where the attached files can't be found.
 
 v5.4.0:
  SportsTracker changes:
